# apple

./: .capstone-companion-check.json  .gitignore  agent_core.py  chainlit_app.py  challenges-agent-workshop.md  find_api.py  find_scripts.py  generate_test_data.py  in89_dump.html  in89_movies.json  init_skill_template.py  init_workspace.py  main.py  pyproject.toml  session.jsonl  skills-lock.json  test_in89.py  verify_update.py
.agents/skills/peas-capstone-report/: SKILL.md
agent/skills/pptx/: SKILL.md
fah-dou-app/: app.py  run.ps1
memory/: HISTORY.md  MEMORY.md
report/: .capstone-progress.md  poster-prompt.txt  poster.html  ppt-style.json  project-architecture.mmd  render_poster.js  專題報告.docx  專題報告.md  專題報告.pptx
session-records/: peas-workshop-advanced-log.md
skills/green-market-registrar/: README.md  SKILL.md
skills/peas-capstone-report/: README.md
skills/peas-workshop-advanced-coach/: SKILL.md
skills/vcr-imagegen/: SKILL.md
studio_shell/: agent_panel.py  app.py  page_shell.py  shell_ui.py
studio_shell/data/: home.json  movie_favorites.json  movie_posters.json  playground.json
studio_shell/pages/: 1_Home.py  2_Playground.py  3_UI_Cheatsheet.py  4_Order_System.py  5_UI_Prompt_Builder.py  6_UI_List_Helper.py  7_我還沒想好.py  8_電影搜尋.py
studio_shell/scripts/: add_page_navigation.py  add_recent_movies.py  fetch_movie_posters.py  fetch_movie_posters_round2.py  keep_conservative_posters.py  refine_movie_posters.py  refine_movie_posters_half.py  refine_movie_posters_remaining.py  update_movies_from_in89.py
templates/memory/: MEMORY.md
活動照片/: 圖說範例_蔡同學.md
(+57 files in other folders)
