[project]
name = "apple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chainlit>=2.11.1",
    "langchain-openai>=1.1.16",
    "openai-tts",
    "peas-agent-core",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "requests>=2.33.1",
    "streamlit>=1.58.0",
]

[tool.uv.sources]
openai-tts = { git = "https://github.com/mz038197/openai-tts.git" }
peas-agent-core = { git = "https://github.com/mz038197/peas-agent-core.git" }
